add enpoints to select and delete an user
